2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b145

	* Change: rss.php config options mostly migrated to config wizard.

2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b144

	* Change:  Add "php_value session.save_handler files" to 
	  the php_values.template to proactively prevent some of the 
	  cases where it's set to "user" system-wide.

	* Change: Add a developer-file hook to init.php.  If the file
	  "lib/devel.php" is present on your local system, it will be 
	  included near the top of init.php.  It's a logical location for
	  code profiling modules and such that shouldn't be checked into
	  CVS, but you don't want getting overwritten with each cvs up.

2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b143

	* Change: Only display visible (non-hidden) albums

	* Change: Fix PHP shorttags

	* Change: Text changes

	* Note: Lots of whitespace changes - use "diff -w -r1.1 -r1.2"
	  to see the real changes

2004-05-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b142

	* Add:  Initial version of Cody Smith's RSS Generator
	  Based on rss.php 0.4 - Migration to config.php variables next

2004-05-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b141

	* Change:  Accidentally committed debug code in init.php - removing

2004-05-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b140

	* Change: Use makeGalleryHeaderUrl() instead of makeGalleryUrl() in
	  makeFormIntro due to the fact that we, later in the function, split
	  parameters based on "&"

2004-05-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b139

	* Change:
	  !!  2004-05-23:   adv_search.php has been broken
	  !!  for an unknown amount of time.  Since it has
	  !!  no references from outside files, it will 
	  !!  automatically redirect to albums.php until
	  !!  it can be fixed

2004-05-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b138
