@@ -1,3 +1,9 @@
+2004-05-25  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b146
+
+	* Fixed upload (and slideshow) applets when Gallery is embedded in PHPNuke.
+	  Other CMSs may need more work. The applets are confirmed to work
+	  with PHPNuke and PostNuke.
+
 2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b145
 
 	* Change: rss.php config options mostly migrated to config wizard.
